--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </aside>
         <!-- onde ficará  -->
         <section>  
-            <p>O gerador de referências ...</p>
+            <p>O gerador de referências segue as normas da ABNT NBR...</p>
         </section> 
     </main>    
 </body>
