ajuste na página 'site'

--- a/site.html
+++ b/site.html
@@ -35,6 +35,12 @@
                 <input type="text" name="lacesso" id="acesso">
             </form>
         </section> 
+        <section class="referencia">
+            <h2>REFERÊNCIA PRONTA</h2>
+            <article class="campo_referencia">
+
+            </article>
+        </section>
 
         <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
     </main>    
