ajustes no HTML

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Gerador de referências - ABNT</title>
 </head>
 <body>
+    <header><h1>REFERÊNCIAS</h1></header>
     <main class="tudo">
-        <header>REFERÊNCIAS</header>
         <aside class="materiais">
             <button class="site">SITE</button>
             <button class="video">VÍDEO</button>
@@ -17,7 +17,7 @@
             <button class="trabalhos">TRABALHOS ACADÊMICOS</button>
         </aside>
         <!-- onde ficará  -->
-        <section>  
+        <section class="referencias">  
             <p>O gerador de referências segue as normas da ABNT NBR...</p>
         </section> 
     </main>    
