--- a/site.html
+++ b/site.html
@@ -5,44 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de referências - ABNT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header><h1>REFERÊNCIAS</h1></header>
     <main class="tudo">
-        <header>REFERÊNCIAS</header>
+        MAIN
         <aside class="materiais">
-            <button class="site">SITE</button>
-            <button class="video">VÍDEO</button>
-            <button class="livro">LIVRO</button>
-            <button class="artigo">ARTIGO EM PDF/ONLINE</button>
-            <button class="trabalhos">TRABALHOS ACADÊMICOS</button>
+
+            <button class="aside" class="site">SITE</button>
+            <button class="aside" class="video">VÍDEO</button>
+            <button class="aside" class="livro">LIVRO</button>
+            <button class="aside" class="artigo">ARTIGO EM PDF/ONLINE</button>
+            <button class="aside" class="trabalhos">TRABALHOS ACADÊMICOS</button>
+
         </aside>
+
         <!-- onde ficará  -->
-        <section>  
-            <form action="">
-                <label for="autor">AUTOR</label>
-                <input type="text" name="lautor" id="autor">
-            </form>
-            <form action="">
-                <label for="titulo">TÍTULO</label>
-                <input type="text" name="ltitulo" id="titulo">
-            </form>
-            <form action="">
-                <label for="disponivel">DISPONÍVEL EM:</label>
-                <input type="text" name="ldisponivel" id="disponivel">
-            </form>
-            <form action="">
-                <label for="acesso">ACESSO EM:</label>
-                <input type="text" name="lacesso" id="acesso">
-            </form>
-        </section> 
-        <section class="referencia">
-            <h2>REFERÊNCIA PRONTA</h2>
-            <article class="campo_referencia">
+        <section class="referencias">
+            SECTION
+            <section class="informacoes">
+                INFORMAÇÕES
+                <form action="">
+                    <label for="autor">AUTOR</label>
+                    <input type="text" name="lautor" id="autor">
+                </form>
 
-            </article>
+                <form action="">
+                    <label for="titulo">TÍTULO</label>
+                    <input type="text" name="ltitulo" id="titulo">
+                </form>
+
+                <form action="">
+                    <label for="disponivel">DISPONÍVEL EM:</label>
+                    <input type="text" name="ldisponivel" id="disponivel">
+                </form>
+
+                <form action="">
+                    <label for="acesso">ACESSO EM:</label>
+                    <input type="text" name="lacesso" id="acesso">
+                </form>
+
+            </section>
+
+            <section class="resultado">
+                RESULTADO
+                <h2>REFERÊNCIA PRONTA</h2>
+                <!-- a referência pronta deverá aparecer aqui -->
+            </section>
         </section>
-
-        <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
     </main>    
+    <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
+
 </body>
 </html>
