correção do nome

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gerador de referências - ABNT</title>
 </head>
 <body>
-    <header><h1>REFERÊNCIAS</h1></header>
+    <header><h1>REFERÊNCIAS BIBLIOGRÁFICAS</h1></header>
     <main class="tudo">
         <aside class="materiais">
             <button class="site">SITE</button>
