criação de class dos forms

--- a/site.html
+++ b/site.html
@@ -26,22 +26,22 @@
             
             <section class="informacoes">
                 
-                <form action="">
+                <form action="" class="fomulario">
                     <label for="autor">AUTOR</label>
                     <input type="text" name="lautor" id="autor">
                 </form>
 
-                <form action="">
+                <form action="" class="fomulario">
                     <label for="titulo">TÍTULO</label>
                     <input type="text" name="ltitulo" id="titulo">
                 </form>
 
-                <form action="">
+                <form action="" class="fomulario">
                     <label for="disponivel">DISPONÍVEL EM:</label>
                     <input type="text" name="ldisponivel" id="disponivel">
                 </form>
 
-                <form action="">
+                <form action="" class="fomulario">
                     <label for="acesso">ACESSO EM:</label>
                     <input type="text" name="lacesso" id="acesso">
                 </form>
