organização geral das caixas

--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <title>Gerador de referências - ABNT</title>
 </head>
 <body>
-    <header><h1>REFERÊNCIAS BIBLIOGRÁFICAS</h1></header>
-    <main class="tudo">
-        <aside class="materiais">
-            <button class="site">SITE</button>
-            <button class="video">VÍDEO</button>
-            <button class="livro">LIVRO</button>
-            <button class="artigo">ARTIGO EM PDF/ONLINE</button>
-            <button class="trabalhos">TRABALHOS ACADÊMICOS</button>
-        </aside>
-        <!-- onde ficará  -->
-        <section class="referencias">  
-            <p>O gerador de referências segue as normas da ABNT NBR...</p>
-        </section> 
-    </main>    
+    <article class="geral">
+        <header><h1>REFERÊNCIAS BIBLIOGRÁFICAS</h1></header>
+        <main class="tudo">
+            <aside class="materiais">
+                <button class="site">SITE</button>
+                <button class="video">VÍDEO</button>
+                <button class="livro">LIVRO</button>
+                <button class="artigo">ARTIGO EM PDF/ONLINE</button>
+                <button class="trabalhos">TRABALHOS ACADÊMICOS</button>
+            </aside>
+            <!-- onde ficará  -->
+            <section class="referencias">
+                <p>O gerador de referências segue as normas da ABNT NBR...</p>
+            </section>
+        </main>
+    </article>
 </body>
 </html>
