adição do arquivo js

--- a/site.html
+++ b/site.html
@@ -55,6 +55,6 @@
         </main>
     </article>
     <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
-
+    <script src="main.js"></script>
 </body>
 </html>
