criação de links

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <header><h1>REFERÊNCIAS BIBLIOGRÁFICAS</h1></header>
         <main class="tudo">
             <aside class="materiais">
-                <button class="site">SITE</button>
-                <button class="video">VÍDEO</button>
-                <button class="livro">LIVRO</button>
-                <button class="artigo">ARTIGO EM PDF/ONLINE</button>
-                <button class="trabalhos">TRABALHOS ACADÊMICOS</button>
+                <button class="site"><a href="site.html">SITE</a></button>
+                <button class="video"><a href="video.html">VÍDEO</a></button>
+                <button class="livro"><a href="livro.html">LIVRO</a></button>
+                <button class="artigo"><a href="artigo.html">ARTIGO EM PDF/ONLINE</a></button>
+                <button class="trabalhos"><a href="trabalhos.html">TRABALHOS ACADÊMICOS</a></button>
             </aside>
             <!-- onde ficará  -->
             <section class="referencias">
