--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </aside>
             <!-- onde ficará  -->
             <section class="referencias">
+                <h1>Gerador de referências</h1>
                 <p>O gerador de referências segue as normas da ABNT NBR...</p>
             </section>
         </main>
