--- a/site.html
+++ b/site.html
@@ -38,9 +38,9 @@
                         <label class="das_informacoes" for="disponivel">DISPONÍVEL EM:</label>
                         <input type="text" name="ldisponivel" id="disponivel">
                     </form>
-                    <form action="" class="fomulario">
-                        <label class="das_informacoes" for="acesso">ACESSO EM:</label>
-                        <input type="text" name="lacesso" id="acesso">
+                    <form action="" class="formulario">
+                        <label class="das_informacoes" for="acesso">ACESSO EM: </label>
+                        <input type="date" name="lacesso" id="acesso">
                     </form>
                     <button type="submit" class="enviar_informacoes">ENVIAR</button>
                 </section>
