--- a/site.html
+++ b/site.html
@@ -33,7 +33,11 @@
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="titulo">TÍTULO</label>
                         <input type="text" name="ltitulo" id="titulo">
-                    </form>
+                    </form>                    
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="titulo">SUBTÍTULO</label>
+                        <input type="text" name="lsubtitulo" id="subtitulo">
+                    </form>                    
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="disponivel">DISPONÍVEL EM:</label>
                         <input type="text" name="ldisponivel" id="disponivel">
