--- a/video.html
+++ b/video.html
@@ -27,7 +27,7 @@
                 <section class="informacoes">
         
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="autor">AUTOR</label>
+                        <label class="das_informacoes" for="autor">AUTOR (se houver)</label>
                         <input type="text" name="lautor" id="autor">
                     </form>
                     <form action="" class="fomulario">
