--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header><h1>REFERÊNCIAS BIBLIOGRÁFICAS</h1></header>
     <article class="geral">
-        <header><h1>REFERÊNCIAS BIBLIOGRÁFICAS</h1></header>
         <aside class="materiais">
             <button class="site"><a href="site.html" class="site">SITE</a></button>
             <button class="video"><a href="video.html" class="video">VÍDEO</a></button>
@@ -24,6 +24,7 @@
                 <p>O gerador de referências segue as normas da ABNT NBR...</p>
             </section>
         </main>
+        <footer>Criado por Patrícia Santana</footer>
     </article>
     <script src="main.js"></script>
 </body>
