tela-menor-páginas-adicionais

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <main class="tudo">
             <!-- onde ficará  -->
             <section class="referencias">
-                <h1 class="titulo_section">Gerador de referências</h1>
+                <div class="legenda_section">
+                    <h2 class="titulo_section legenda_section">Gerador de referências</h2>
+                </div>
                 <p>O gerador de referências segue as normas da ABNT NBR...</p>
             </section>
         </main>
