--- a/site.html
+++ b/site.html
@@ -21,10 +21,9 @@
             <!-- onde ficará  -->
             <section class="referencias">
                 <div class="legenda_section">
-                    <h2>INFORMAÇÕES PARA REFERÊNCIA</h2>
+                    <h2 class="titulo_section">Informações para referência</h2>
                 </div>
-                <section class="informacoes">
-        
+                <section class="informacoes">       
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="autor">AUTOR</label>
                         <input type="text" name="lautor" id="autor">
@@ -48,7 +47,7 @@
                     <button type="submit" class="enviar_informacoes">ENVIAR</button>
                 </section>
                 <div class="legenda_section">
-                    <h2>REFERÊNCIA PRONTA</h2>
+                    <h2 class="titulo_section">Referência pronta</h2>
                 </div>
                 <section class="resultado">
         
