--- a/video.html
+++ b/video.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,8 @@
     <title>Gerador de referências - ABNT</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<!-- page3 -->
 <body>
     <article class="geral">
         <header><h1>REFERÊNCIAS BIBLIOGRÁFICAS</h1></header>
