separação-em-ejs

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<!-- part1 -->
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de referências - ABNT</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<!-- acrescentar head.ejs -->
 
 <!-- page1 -->
 <body>
     <article class="geral">
         <header><h1>REFERÊNCIAS BIBLIOGRÁFICAS</h1></header>
-        <aside class="materiais">
-            <button class="site"><a href="site.html" class="site">SITE</a></button>
-            <button class="video"><a href="video.html" class="video">VÍDEO</a></button>
-            <button class="livro"><a href="livro.html" class="livro">LIVRO</a></button>
-            <button class="artigo"><a href="artigo.html" class="artigo">ARTIGO EM PDF/ONLINE</a></button>
-            <button class="trabalhos"><a href="trabalhos.html" class="trabalhos">TRABALHOS ACADÊMICOS</a></button>
-        </aside>
+        <!--acrescentar aside.ejs  -->
         <main class="tudo">
             <!-- onde ficará  -->
             <section class="referencias">
