--- a/pages/site.html
+++ b/pages/site.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de referências - ABNT</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<!-- acrescentar head.ejs -->
 
 <!-- page2 -->
 <body>
     <article class="geral">
         <header><h1>REFERÊNCIAS BIBLIOGRÁFICAS</h1></header>
-        <aside class="materiais">
-            <button class="site"><a href="site.html" class="site">SITE</a></button>
-            <button class="video"><a href="video.html" class="video">VÍDEO</a></button>
-            <button class="livro"><a href="livro.html" class="livro">LIVRO</a></button>
-            <button class="artigo"><a href="artigo.html" class="artigo">ARTIGO EM PDF/ONLINE</a></button>
-            <button class="trabalhos"><a href="trabalhos.html" class="trabalhos">TRABALHOS ACADÊMICOS</a></button>
-        </aside> 
+        <!--acrescentar aside.ejs  -->
         <main class="tudo">
             <!-- onde ficará  -->
             <section class="referencias">
@@ -48,14 +36,8 @@
                         <input type="date" name="lacesso" id="acesso">
                     </form>
                     <button type="submit" class="enviar_informacoes">ENVIAR</button>
-                </section>
-                <div class="legenda_section">
-                    <h2 class="titulo_section">Referência pronta</h2>
-                </div>
-                <section class="resultado">
-        
-                    <!-- a referência pronta deverá aparecer aqui -->
-                </section>
+                </section>        
+                    <!-- acrescentar done.ejs -->
             </section>
         </main>
         <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
