--- a/pages/video.html
+++ b/pages/video.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de referências - ABNT</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<!-- acrescentar head.ejs -->
 
 <!-- page3 -->
 <body>
@@ -50,13 +44,7 @@
                     </form>
                     <button type="submit" class="enviar_informacoes">ENVIAR</button>
                 </section>
-                <div class="legenda_section">
-                    <h2>REFERÊNCIA PRONTA</h2>
-                </div>
-                <section class="resultado">
-        
-                    <!-- a referência pronta deverá aparecer aqui -->
-                </section>
+                    <!-- acrescentar done.ejs -->
             </section>
         </main>
         <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
